fixed contact details, missing navbar fix

--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ ul {
 
 .icons-container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     height: 100%;
 }
