--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ nav {
 }
 
 ul {
-    position: relative;
+    position: absolute;
 }
 
 .nav-line {
@@ -101,12 +101,18 @@ ul {
     color: black;
 }
 
-/* 
+.nav ul {
+    top: 60px;
+    right: 45px;
+    text-align: end;
+    line-height: 25px;
+    transition: all 1s;
+}
+
 .nav ul.hide {
     top: -100px;
-    background-color: red;
     transition: all 1s;
-} */
+}
 
 
 /* Home section */
@@ -300,6 +306,10 @@ ul {
     flex-direction: column;
 }
 
+.contact-container textarea {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 .form-line {
     margin-bottom: 10px;
     padding: 10px;
@@ -457,6 +467,15 @@ ul {
 
     .nav ul a {
         letter-spacing: 2px;
+    }
+
+    nav {
+        position: relative;
+    }
+
+    .nav ul {
+        top: auto;
+        right: auto;
     }
 
     .col-md-1 {
